# antlr4

./: pascal.g4
antlr4/lib/: antlr4-runtime.lib
parser/: CMakeLists.txt  main.cpp  pascal.interp  pascal.tokens  pascalBaseVisitor.cpp  pascalBaseVisitor.h  pascalLexer.cpp  pascalLexer.h  pascalLexer.interp  pascalParser.cpp  pascalParser.h  pascalUserVisitor.h  pascalVisitor.cpp  pascalVisitor.h
